--- a/web/sass/_slider.scss
+++ b/web/sass/_slider.scss
@@ -1,5 +1,5 @@
 section.slider {
-    display: block;
+    display: none;
     margin-top: 70px;
     overflow: hidden;
     position: relative;
@@ -26,6 +26,23 @@ section.slider {
         }
     }
 
+    &#one {
+        display: block;
+
+        .slide {
+            width: 100%;
+            padding-bottom: 40%;
+
+            @media only screen and (min-width: 2000px) {
+                padding-bottom: 800px;
+            }
+            
+            .alphaImage {
+                position: absolute;
+            }
+        }
+    }
+
     a.slidesjs-navigation {
         position: absolute;
         width: 300px;
@@ -36,6 +53,11 @@ section.slider {
         background-repeat: no-repeat;
         cursor: pointer;
         color: transparent;
+        
+        &.slidesjs-play,
+        &.slidesjs-stop {
+            display: none;
+        }
 
         &.slidesjs-previous {
             left: 0;
