center content for one slide

--- a/web/sass/_slider.scss
+++ b/web/sass/_slider.scss
@@ -40,6 +40,11 @@ section.slider {
             .alphaImage {
                 position: absolute;
             }
+            
+            .content {
+                position: absolute;
+                max-width: none;
+            }
         }
     }
 
