--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -130,7 +130,7 @@
                 <section>
                     <h1>Marc et Christine Gallay</h1>
 
-                    <p>Couple pastoral du Gospel Center Lausanne</p>
+                    <p>Pasteurs</p>
                 </section>
 
             </article>
@@ -153,7 +153,7 @@
                 <section>
                     <h1>Patrick Bigler</h1>
 
-                    <p>Membre du conseil de direction</p>
+                    <p>Conseil de direction</p>
                 </section>
             </article>
 
@@ -164,7 +164,7 @@
                 <section>
                     <h1>Alix Bingle</h1>
 
-                    <p>Membre du conseil de direction</p>
+                    <p>Conseil de direction</p>
                 </section>
             </article>
 
@@ -175,7 +175,7 @@
                 <section>
                     <h1>Marc Rapelli</h1>
 
-                    <p>Membre du conseil de direction</p>
+                    <p>Conseil de direction</p>
                 </section>
             </article>
 
@@ -186,7 +186,29 @@
                 <section>
                     <h1>Timothée Rochat</h1>
 
-                    <p>Membre du conseil de direction</p>
+                    <p>Conseil de direction</p>
+                </section>
+            </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/FionaBenavides.jpg') }}"
+                     alt="Fiona Benavides"/>
+                <section>
+                    <h1>Fiona Benavides</h1>
+
+                    <p>Conseil de direction</p>
+                </section>
+            </article>
+
+            <article class="people">
+                <img class="radius round"
+                     src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/YoannGern.jpg') }}"
+                     alt="Yoann Gern"/>
+                <section>
+                    <h1>Yoann Gern</h1>
+
+                    <p>Conseil de direction</p>
                 </section>
             </article>
         {% endspaceless %}
